--- a/scalar-and-vector-quantities.qmd
+++ b/scalar-and-vector-quantities.qmd
@@ -364,6 +364,85 @@ Magnitude of the Equilibrium Force $\approx 35.8 \, \text{N}$
 Direction of the Equilibrium Force $\approx 34.92^\circ$ above the horizontal (in the direction of the 15 N force).
 :::
 
+::: {#exm-sinecosine}
+Calculate the resultant of the forces 0.7 kN at 147° and 1.3 kN at -71° by using the cosine and sine rules.
+
+Given the following forces:
+
+-   Force 1, $F_1 = 0.7 , \text{kN} , at  147^\circ$,
+-   Force 2, $F_2 = 1.3 , \text{kN} , at -71^\circ$.
+
+The angle between the two forces is:
+
+$$
+\theta = 147^\circ - (-71^\circ) = 147^\circ + 71^\circ = 218^\circ
+$$
+
+Since $( 218^\circ > 180^\circ), we subtract from ( 360^\circ )$ to get the smaller angle:
+
+$$
+\theta = 360^\circ - 218^\circ = 142^\circ
+$$
+
+Step 1: Using the Cosine Rule to Find the Resultant Magnitude
+
+The magnitude of the resultant $R$ is given by the cosine rule:
+
+$$
+R = \sqrt{F_1^2 + F_2^2 + 2 F_1 F_2 \cos(\theta)}.
+$$
+
+Substituting the known values:
+
+$$
+R = \sqrt{(0.7)^2 + (1.3)^2 + 2(0.7)(1.3)\cos(142^\circ)}.
+$$
+
+We calculate $\cos142^\circ$:
+
+$$
+\cos(142^\circ) = \cos(180^\circ - 38^\circ) = -\cos(38^\circ) \approx -0.788.
+$$
+
+Now substitute into the formula for ( R ):
+
+$$
+R = \sqrt{0.49 + 1.69 - 1.432}.
+$$
+
+$$
+R = \sqrt{0.748} \approx 0.865 \, \text{kN}.
+$$
+
+Step 2: Using the Sine Rule to Find the Direction
+
+The direction of the resultant $\alpha$ relative to $F_1$ is found using the sine rule:
+
+$$
+\frac{\sin(\alpha)}{F_2} = \frac{\sin(\theta)}{R}.
+$$
+
+We calculate $\sin142^\circ$:
+
+$$
+\sin(142^\circ) = \sin(180^\circ - 142^\circ) = \sin(38^\circ) \approx 0.616.
+$$
+
+Now apply the sine rule:
+
+$$
+\sin(\alpha) = \frac{1.3 \times 0.616}{0.865} \approx 0.926.
+$$
+
+Thus, $\alpha \approx 67.9^\circ$.
+
+The direction of the resultant relative to the positive x-axis is:
+
+$$
+\text{Direction} = 147^\circ - 67.9^\circ = 79.1^\circ.
+$$
+:::
+
 ::: {#exm-ship}
 A ship is heading in a direction N 30° E at a speed which in still water would be 20 knots. It is carried off course by a current of 5 knots in a direction of E 60° S. Calculate the ship’s actual speed and direction.
 
