--- a/scalar-and-vector-quantities.qmd
+++ b/scalar-and-vector-quantities.qmd
@@ -48,31 +48,33 @@ The parallelogram method is another visual technique for adding two vectors, spe
 
 ## Cosine Rule
 
-The Cosine Rule is used to relate the lengths of the sides of a triangle to the cosine of one of its angles:
+![Rules of Cosine and Sine](images/sinecosrule.png){#fig-law_cos_sine}
+
+The Cosine Rule\index{Cosine rule} is used to relate the lengths of the sides of a triangle as shown in @fig-law_cos_sine to the cosine of one of its angles:
 
 $$
-c^2 = a^2 + b^2 - 2ab\cos C
+c^2 = a^2 + b^2 - 2ab\cos \gamma
 $$ {#eq-cos}
 
 Where:
 
 -   a, b, c are the sides of the triangle.
 
--   C is the angle opposite side c.
+-   $\gamma$ is the angle opposite side c.
 
 ## Sine Rule
 
-The Sine Rule relates the sides and angles of a triangle:
+The Sine Rule\index{Sine rule} relates the sides and angles of a triangle in @fig-law_cos_sine:
 
 $$
-\frac{a}{\sin A} = \frac{b}{\sin B} = \frac{c}{\sin C}
+\frac{a}{\sin \alpha} = \frac{b}{\sin \beta} = \frac{c}{\sin \gamma}
 $$ {#eq-sine}
 
 Where:
 
--   a, b, c are the sides of the triangle opposite to angles A, B, C, respectively.
+-   $\alpha$, $\beta$, $\gamma$ are the angles of the triangle.
 
--   A, B, C are the angles of the triangle.
+-   a, b, c are the sides of the triangle opposite to angles $\alpha$, $\beta$, $\gamma$ respectively.
 
 ## Space Diagrams
 
@@ -365,7 +367,7 @@ Direction of the Equilibrium Force $\approx 34.92^\circ$ above the horizontal (i
 :::
 
 ::: {#exm-sinecosine}
-Calculate the resultant of the forces 0.7 kN at 147° and 1.3 kN at -71° by using the cosine and sine rules.
+Calculate the resultant of the forces 0.7 kN at 147° and 1.3 kN at -71° by using the cosine\index{Cosine rule} and sine rules\index{Sine rule}.
 
 Given the following forces:
 
