--- a/scalar-and-vector-quantities.qmd
+++ b/scalar-and-vector-quantities.qmd
@@ -46,6 +46,41 @@ The parallelogram method is another visual technique for adding two vectors, spe
 
 ![Addition of Vectors by Parallelogram Method](images/parallelogram-method.png){#fig-Parallelogram_method}
 
+## Cartesian Coordinates
+
+In a two-dimensional Cartesian coordinate system\index{Cartesian coordinate system}, a point is represented as $(x, y)$, where:
+
+-   $x$ is the horizontal distance from the origin ($the\ x-coordinate$).
+
+-   $y$ is the vertical distance from the origin ($the\ y-coordinate$).
+
+The distance $r$ of a point $(x, y)$ from the origin can be calculated using:
+
+$$
+r = \sqrt{x^2 + y^2}
+$$ {#eq-cartesian1}
+
+The angle $\theta$ between the positive $(x)-axis$ and the line joining the origin to the point can be found as:
+
+$$
+\theta = \tan^{-1}\left(\frac{y}{x}\right)
+$$ {#eq-cartesian2}
+
+## Polar Coordinates
+
+In a two-dimensional Polar coordinate system\index{Polar coordinate system}, a point is represented as $(r,\theta)$, where:
+
+-   $r$ is the radial distance from the origin.
+-   $\theta$ is the angle between the positive (x)-axis and the line joining the origin to the point (measured in radians or degrees).
+
+The relationships between Polar and Cartesian coordinates are: $$
+x = r\cos\theta, \quad y = r\sin\theta
+$$ {#eq-polar1}
+
+Conversely, given Cartesian coordinates (x, y), the polar coordinates can be obtained as: $$
+r = \sqrt{x^2 + y^2}, \quad \theta = \tan^{-1}\left(\frac{y}{x}\right)
+$$ {#eq-polar2}
+
 ## Cosine Rule
 
 ![Rules of Cosine and Sine](images/sinecosrule.png){#fig-law_cos_sine}
@@ -371,8 +406,8 @@ Calculate the resultant of the forces 0.7 kN at 147° and 1.3 kN at -71° by usi
 
 Given the following forces:
 
--   Force 1, $F_1 = 0.7 , \text{kN} , at  147^\circ$,
--   Force 2, $F_2 = 1.3 , \text{kN} , at -71^\circ$.
+-   Force 1, $F_1 = 0.7 \ \text{kN} , \ at \  147^\circ$,
+-   Force 2, $F_2 = 1.3 \ \text{kN} , \ at -71^\circ$.
 
 The angle between the two forces is:
 
@@ -380,7 +415,7 @@ $$
 \theta = 147^\circ - (-71^\circ) = 147^\circ + 71^\circ = 218^\circ
 $$
 
-Since $( 218^\circ > 180^\circ), we subtract from ( 360^\circ )$ to get the smaller angle:
+Since $( 218^\circ > 180^\circ), we\ subtract\ from \ 360^\circ$ to get the smaller angle:
 
 $$
 \theta = 360^\circ - 218^\circ = 142^\circ
