--- a/moment-of-a-force.qmd
+++ b/moment-of-a-force.qmd
@@ -255,6 +255,259 @@ The **first moment** and **second moment** are concepts from mathematics and phy
 
 In summary, the **first moment** tells you *where things are*, while the **second moment** tells you *how far things are spread*.Problem Set
 
+## Second Moment Calculations
+
+The **second moment**, or **moment of inertia**, measures how an area or mass is distributed about an axis.
+
+### General Formula
+
+The second moment of area about the (x)-axis or (y)-axis is:
+
+$$
+I_x = \int y^2 \, dA, \quad I_y = \int x^2 \, dA
+$$
+
+## Derivation of the Moment of Inertia of a Rectangle About Its Base
+
+We calculate the **moment of inertia** of a rectangle about its **base**, where the base is along the $x$-axis and the height extends from $y = 0$ to $y = h$.
+
+### 1. Moment of Inertia Formula
+
+The formula for the moment of inertia is:
+
+$$
+I = \int y^2 \, dA
+$$
+
+Here: - $y$: distance from the axis of rotation (the base of the rectangle in this case), - $dA$: the infinitesimal area element.
+
+### 2. Setup for the Rectangle
+
+-   The rectangle has a width of $b$ and height $h$.
+-   The height extends from $y = 0$ to $y = h$.
+-   The infinitesimal area element is $dA = b \, dy$.
+
+The integral becomes:
+
+$$
+I_{\text{base}} = \int_{0}^{h} y^2 \, b \, dy
+$$
+
+### 3. Solve the Integral
+
+Factor $b$ (constant width) outside of the integral:
+
+$$
+I_{\text{base}} = b \int_{0}^{h} y^2 \, dy
+$$
+
+The integral of $y^2$ is:
+
+$$
+\int y^2 \, dy = \frac{y^3}{3}
+$$
+
+Apply the limits $y = 0$ to $y = h$:
+
+$$
+I_{\text{base}} = b \left[ \frac{y^3}{3} \right]_{0}^{h}
+$$
+
+Substitute the limits:
+
+$$
+I_{\text{base}} = b \left( \frac{h^3}{3} - \frac{0^3}{3} \right)
+$$
+
+Simplify:
+
+$$
+I_{\text{base}} = b \cdot \frac{h^3}{3}
+$$
+
+### 4. Final Result
+
+The moment of inertia of a rectangle about its base is:
+
+$$
+I_{\text{base}} = \frac{b h^3}{3}
+$$
+
+## Derivation of the Moment of Inertia of a Rectangle About its Centroidal Axis
+
+We calculate the **moment of inertia** of a rectangle about its **centroidal** $x$-axis. The centroidal axis passes horizontally through the centroid of the rectangle, located at $y = h/2$ (mid-height of the rectangle).
+
+## 1. Moment of Inertia Formula
+
+The formula for the moment of inertia is:
+
+$$
+I = \int y^2 \, dA
+$$
+
+Here:
+
+-   $y$: distance from the axis of rotation (centroidal axis in this case),
+
+-   $dA$: the infinitesimal area element.
+
+## 2. Setup for the Rectangle
+
+-   The rectangle is centered on the centroidal $x$-axis, so the height ranges from $y = -h/2$ to $y = h/2$.
+
+-   The width of the rectangle is $b$.
+
+-   The infinitesimal area element is $dA = b \, dy$.
+
+The integral becomes:
+
+$$
+I_{\text{centroidal}} = \int_{-h/2}^{h/2} y^2 \, b \, dy
+$$
+
+## 3. Solve the Integral
+
+Factor $b$ (constant width) outside of the integral:
+
+$$
+I_{\text{centroidal}} = b \int_{-h/2}^{h/2} y^2 \, dy
+$$
+
+The integral of $y^2$ is:
+
+$$
+\int y^2 \, dy = \frac{y^3}{3}
+$$
+
+Apply the limits $y = -h/2$ to $y = h/2$:
+
+$$
+I_{\text{centroidal}} = b \left[ \frac{y^3}{3} \right]_{-h/2}^{h/2}
+$$
+
+Substitute the limits:
+
+$$
+I_{\text{centroidal}} = b \left( \frac{(h/2)^3}{3} - \frac{(-h/2)^3}{3} \right)
+$$
+
+Since $(-h/2)^3 = -(h/2)^3$, the terms simplify:
+
+$$
+I_{\text{centroidal}} = b \left( \frac{(h/2)^3}{3} + \frac{(h/2)^3}{3} \right)
+$$
+
+Combine the terms:
+
+$$
+I_{\text{centroidal}} = b \left( \frac{2(h/2)^3}{3} \right)
+$$
+
+Simplify $(h/2)^3 = \frac{h^3}{8}$:
+
+$$
+I_{\text{centroidal}} = b \cdot \frac{2}{3} \cdot \frac{h^3}{8}
+$$
+
+$$
+I_{\text{centroidal}} = b \cdot \frac{h^3}{12}
+$$
+
+## 4. Final Result
+
+The moment of inertia of a rectangle about its centroidal $x$-axis is:
+
+$$
+I_{\text{centroidal}} = \frac{b h^3}{12}
+$$
+
+This is the standard formula for the moment of inertia of a rectangle about its centroidal axis.
+
+## Comparison with the Centroidal Moment of Inertia
+
+The moment of inertia about the base is four times greater than that about the centroidal $x$-axis:
+
+$$
+I_{\text{base}} = 4 \cdot I_{\text{centroidal}}
+$$
+
+where:
+
+$$
+I_{\text{centroidal}} = \frac{b h^3}{12}
+$$
+
+## Parallel Axis Theorem
+
+To find the moment of inertia about an axis parallel to the centroidal axis:
+
+$$
+I = I_c + A d^2
+$$
+
+## Radius of Gyration
+
+The radius of gyration of a body about an axis is a measure of the distribution of its area or mass relative to that axis. It is defined as the distance from the axis at which the total area or mass of the body could be concentrated without changing its moment of inertia.
+
+Mathematically, the radius of gyration k is given by:
+
+where:
+
+-   I : Moment of inertia about the axis
+
+-   A : Area of the cross-section (for area calculations)
+
+-   m : Mass of the body (for mass calculations)
+
+## Difference Between First Moment and Second Moment
+
+The **first moment** and **second moment** are concepts from mathematics and physics, describing how quantities are distributed around a reference point (such as the mean or origin). Below is a detailed explanation:
+
+## First Moment
+
+-   **Definition**: The first moment measures the mean or center of mass relative to a reference point.
+-   **Formula**: $$
+    M_1 = \sum (x_i \cdot w_i)
+    $$ where $x_i$ is a value, and $w_i$ is its weight.
+-   **Physical Interpretation**: In mechanics, it determines the center of mass or centroid of an object.
+
+## Second Moment
+
+-   **Definition**: The second moment measures the spread or dispersion of values around a reference point.
+
+-   **Formula**: $$
+    M_2 = \sum (x_i^2 \cdot w_i)
+    $$
+
+    where $x_i$ is a value, and $w_i$ is its weight.
+
+-   **Physical Interpretation**: In mechanics, the second moment of area ($I$) is used to describe an object's resistance to bending or torsion (e.g., the moment of inertia).
+
+## Key Differences
+
+| Feature | First Moment | Second Moment |
+|----|----|----|
+| **Reference** | Measures position relative to a point (e.g., centroid). | Measures spread relative to a point. |
+| **Physical Meaning** | Indicates center or balance point. | Indicates resistance or spread. |
+| **Example (Physics)** | Center of mass. | Moment of inertia. |
+
+{{< pagebreak >}}
+
+## Second Moments of Common Shapes
+
+| Shape | Second moment ($I_x$) | Second moment ($I_y$) |
+|----|----|----|
+| ![](images/Moment_of_area_of_a_rectangle_through_the_centroid.svg.png) | $I_x = \frac{1}{12} b h^3$ | $I_x = \frac{1}{12} b^3 h$ |
+| ![](images/Moment_of_area_of_a_rectangle_through_the_base.svg.png) | $I_x = \frac{1}{3} b h^3$ | $I_x = \frac{1}{3} b^3 h$ |
+| ![](images/Moment_of_area_of_a_circle.svg.png) | $I_x = \frac{\pi}{4} r^4$ | $I_y = \frac{\pi}{4} r^4$ |
+| ![](images/Moment_of_area_of_an_annulus.svg.png) | $I_x = \frac{\pi}{4} (r_2^4-r_1^4)$ | $I_y = \frac{\pi}{4} (r_2^4-r_1^4)$ |
+| ![](images/Moment_of_area_of_a_semicircle_through_the_base.svg.png) | $I_x = \frac{\pi}{8} r^4$ | $I_y = \frac{\pi}{8} r^4$ |
+| ![](images/Moment_of_area_of_a_quarter_circle_through_the_base.svg.png) | $I_x = \frac{\pi}{16} r^4$ | $I_y = \frac{\pi}{16} r^4$ |
+| ![](images/Moment_of_inertia_on_a_traingle_through_the_base_with_dimension_'a'.svg.png) | $I_x = \frac{1}{12} b h^3$ |  |
+| ![](images/Moment_of_inertia_on_a_triangle_through_centroide_with_dimension_'a'.svg.png) | $I_x = \frac{1}{36} b h^3$ |  |
+
+: Second moments {#tbl-second-moments}
+
 ## Further Reading
 
 Read Chapter 7 in @russell2021, Chapter 1 in @hannah1995 and Chapter 2 in @bolton2021 for additional information.
