--- a/index.qmd
+++ b/index.qmd
@@ -12,4 +12,8 @@ This workbook presents a collection of lecture notes on Applied Mechanics, desig
 
 @sec-moment-of-a-force: A **moment**\index{moment} is a mathematical concept that represents the product of a distance and a physical quantity, such as force. Moments are typically defined relative to a fixed reference point and pertain to physical quantities situated at some distance from this point. For instance, the moment of force, commonly referred to as torque, is the product of the force applied to an object and the distance from the reference point to the object.
 
+@sec-stress-and-strain: Linear momentum is a fundamental concept in physics that describes the quantity of motion an object has. It is defined as the product of an object's **mass** and its **velocity**. Linear momentum is a vector quantity, meaning it has both magnitude and direction.
+
+@sec-shear-force-and-bending-moment-diagrams: Linear momentum is a fundamental concept in physics that describes the quantity of motion an object has. It is defined as the product of an object's **mass** and its **velocity**. Linear momentum is a vector quantity, meaning it has both magnitude and direction.
+
 @sec-review: Review section
